[package]
name = "shellcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = "z"             # optimize for size
debug=0                     # no debug info
debug-assertions = false    #
overflow-checks = false     # optional
strip="symbols"    